--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "daisyui": "^5.5.3",
     "gsap": "^3.13.0",
     "lucide-react": "^0.553.0",
+    "motion": "^12.23.24",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "zustand": "^5.0.8"
