--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "motion": "^12.23.24",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-github-calendar": "^5.0.0",
     "react-icons": "^5.5.0",
     "react-router": "^7.9.6",
     "react-router-dom": "^7.9.6",
